--- a/game.css
+++ b/game.css
@@ -18,7 +18,7 @@ But it's been pretty hacked through :-)
 #left {
     float: left;
     width: 210px;
-    height: 725px;
+    height: 650px;
     border-right-style: solid;
     border-right-width: 1px;
     padding:5px;
@@ -27,13 +27,14 @@ But it's been pretty hacked through :-)
 
 
 #main_map {
+    margin-top: 2px;
    padding: 0 210px 0 160px;
 }
 
 #right {
     float: right;
     width: 200px;
-    height: 725px;
+    height: 650px;
     border-left-style: solid;
     border-left-width: 1px;
     padding:5px;
