changed font size to small for statblock

--- a/game.css
+++ b/game.css
@@ -23,6 +23,7 @@ But it's been pretty hacked through :-)
     border-right-width: 1px;
     padding:5px;
     margin-right: 5px;
+    font-size: small;
 }
 
 
