--- a/game.css
+++ b/game.css
@@ -16,7 +16,7 @@ body {
     align-items: center;
     justify-content: center;
 
-    background-color: rgb(51, 51, 51);
+    background-color: rgb(247, 247, 247);
 }
 
 .game {
@@ -27,9 +27,10 @@ body {
     
     padding: 20px 25px;
 
+    border: 1px solid black;
     border-radius: 1.5%;
 
-    background-color: rgb(232, 232, 232);
+    background-color: white;
 }
 
 .game-board {
