--- a/game.css
+++ b/game.css
@@ -42,7 +42,8 @@ body {
     display: flex;
     flex-direction: column;
 
-    height: 608px;
+    /* Do not know why the height is this exact number, it just happens to work */
+    height: 592px;
     width: 100%;
 
     margin: -1px 0 0 -1px;
@@ -50,6 +51,10 @@ body {
 
     border: 1px solid black;
     border-collapse: collapse;
+}
+
+.game-board > *:not(#map) {
+    padding: 10px;
 }
 
 #map {
