--- a/game.css
+++ b/game.css
@@ -43,7 +43,7 @@ body {
     flex-direction: column;
 
     /* Do not know why the height is this exact number, it just happens to work */
-    height: 592px;
+    height: 608px;
     width: 100%;
 
     margin: -1px 0 0 -1px;
@@ -51,12 +51,6 @@ body {
 
     border: 1px solid black;
     border-collapse: collapse;
-}
-
-.game-board > *:not(#map) {
-    padding: 10px;
-
-    overflow-y: scroll;
 }
 
 #map {
@@ -93,23 +87,46 @@ Map
 }
 
 /*
-Stats and Crafting
+=======
+Right side of the board
 */
 
-.left {
+.right {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
-.left > * {
+.right > * {
     height: 50%;
     width: 100%;
 }
 
+/*
+Stats and Crafting
+*/
+
+#stats {
+    padding: 10px;
+
+    overflow-y: scroll;
+    box-sizing: border-box;
+}
+
 #stats p {
     margin: 3px 0;
+}
+
+/*
+Recipes
+*/
+
+.recipes {
+    padding: 10px;
+
+    overflow-y: scroll;
+    box-sizing: border-box;
 }
 
 .recipes-title {
