--- a/game.css
+++ b/game.css
@@ -21,7 +21,7 @@ body {
     flex-direction: column;
 
     height: 650px;
-    width: 80%;
+    width: 100%;
     
     padding: 20px 25px;
 
@@ -117,24 +117,23 @@ Map
 }
 
 /*
-=======
-Right side of the board
+Stats tab
 */
 
-.right {
+.stats-tab {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 }
 
-.right > * {
+.stats-tab > * {
     height: 50%;
     width: 100%;
 }
 
 /*
-Stats and Crafting
+Stats and Skills
 */
 
 #stats {
@@ -148,8 +147,8 @@ Stats and Crafting
     margin: 3px 0;
 }
 
-.skill {
-    text-indent: 10px;
+.stats-category {
+    margin: 10px 0;
 }
 
 /*
@@ -163,11 +162,6 @@ Recipes
     box-sizing: border-box;
 }
 
-.recipes-title {
-    text-align: center;
-    font-weight: bold;
-}
-
 recipe {
     display: flex;
     flex-direction: column;
@@ -179,15 +173,10 @@ recipe > *:not(button) {
     width: 100%;
 }
 
-recipe li {
-    text-indent: 10px;
-    
-    list-style-type: none;
-}
-
 /*
 Messages
 */
+
 #messages {
     overflow-y: scroll;
 }
@@ -198,4 +187,28 @@ Messages
 
 .message-title {
     font-weight: 700;
+}
+
+/*
+Inventory
+*/
+.inventory-tab {
+    overflow-y: scroll;
+}
+
+
+/*
+Utility classes
+*/
+
+.tab-header {
+    width: 100%;
+
+    font-weight: 700;
+    font-size: normal;
+    text-align: center;
+}
+
+.list-item {
+    text-indent: 10px;
 }
