Worked on the system
(Made this commit because i'm switching computers and want the workstate to be the same

--- a/game.css
+++ b/game.css
@@ -192,10 +192,19 @@ Messages
 /*
 Inventory
 */
+
 .inventory-tab {
     overflow-y: scroll;
 }
 
+.inv-item {
+    height: 30px;
+    width: 100%;
+}
+
+.inv-item:hover {
+    cursor: pointer;
+}
 
 /*
 Utility classes
