--- a/game.css
+++ b/game.css
@@ -198,11 +198,24 @@ Inventory
 }
 
 .inv-item {
+    margin: 3px 0;
+
     height: 30px;
     width: 100%;
+
+    font-size: 1rem;
 }
 
-.inv-item:hover {
+.inv-drop {
+    margin: 2px 0;
+    padding: 5px;
+
+    height: 1rem;
+
+    border: 1px solid black;
+}
+
+.inv-item:hover, .inv-drop:hover:not(:empty) {
     cursor: pointer;
 }
 
