Re-located Achievements Tab
The achievements are now displayed in the top-left corner, sharing the tab with messages.

--- a/game.css
+++ b/game.css
@@ -174,10 +174,29 @@ recipe > *:not(button) {
 }
 
 /*
+Achievements
+*/
+
+#achievements {
+    height: 300px;
+    overflow-y: scroll;
+}
+
+.achievement {
+    margin: 10px 0;
+}
+
+.achievement-title {
+    font-weight: 700;
+    text-align: center;
+}
+
+/*
 Messages
 */
 
 #messages {
+    height: 300px;
     overflow-y: scroll;
 }
 
